js/js.translator/testData/incremental/invalidation/unicodeSerializationAndDeserialization/lib2/l2.kt
fun qux() = foo()
fun quz() = bar()
